@@ -808,6 +808,43 @@ AM_CONDITIONAL([USE_AVX512_WC_LINECOUNT],
                [test $utils_cv_avx512_intrinsic_exists = yes])
 
 CFLAGS=$ac_save_CFLAGS
+
+CFLAGS="-march=armv8-a+simd $CFLAGS"
+AC_MSG_CHECKING([for neon intrinsics])
+AC_CACHE_VAL([utils_cv_neon_intrinsic_exists],[
+AC_LINK_IFELSE(
+  [AC_LANG_SOURCE([[
+    #include <sys/auxv.h>
+    #include <asm/hwcap.h>
+    #include <arm_neon.h>
+
+    int
+    main (void)
+    {
+      char buffer[128] = {0};
+      uint8x16_t v = vld1q_u8 (buffer);
+      uint8x16_t m = vceqq_u8 (v, v);
+      uint8x16_t s = vandq_u8 (m, m);
+      uint16x8_t a = vpaddlq_u8 (s);
+      uint32x4_t b = vpaddlq_u16 (a);
+      uint64x2_t c = vpaddlq_u32 (b);
+      int value = vgetq_lane_u64 (c, 0) + vgetq_lane_u64 (c, 1);
+      return value && 0 < (getauxval (AT_HWCAP) & HWCAP_ASIMD);
+    }
+  ]])
+  ],[
+    utils_cv_neon_intrinsic_exists=yes
+  ],[
+    utils_cv_neon_intrinsic_exists=no
+  ])])
+AC_MSG_RESULT([$utils_cv_neon_intrinsic_exists])
+if test $utils_cv_neon_intrinsic_exists = yes; then
+  AC_DEFINE([USE_NEON_WC_LINECOUNT], [1], [Counting lines with Neon enabled])
+fi
+AM_CONDITIONAL([USE_NEON_WC_LINECOUNT],
+               [test $utils_cv_neon_intrinsic_exists = yes])
+
+CFLAGS=$ac_save_CFLAGS
 ############################################################################
 
 dnl Autogenerated by the 'gen-lists-of-programs.sh' auxiliary script.
